# cli

./: .gitignore  CLAUDE.md  CMakeLists.txt  CMakePresets.json  CPPLINT.cfg  Doxyfile  LICENSE  README.md  aliases.yaml.example  theme.yaml.example
.github/workflows/: build.yml  docs.yml  release.yml
adapters/example/: CMakeLists.txt  schema.yaml
adapters/example/include/adapters/example/: adapter.h
adapters/example/src/: adapter.cc
adapters/hd_relay/: CMakeLists.txt  schema.yaml
adapters/hd_relay/include/adapters/hd_relay/: adapter.h
adapters/hd_relay/src/: adapter.cc
adapters/takt/: CMakeLists.txt
adapters/takt/include/adapters/takt/: adapter.h
adapters/takt/src/: adapter.cc  takt_transport.cc  takt_transport.h
binaries/einheit/src/: main.cc
cmake/: einheit_binary.cmake  install.cmake  lib_cli_core.cmake  lib_cli_protocol.cmake  lib_cli_render.cmake  lib_cli_transport.cmake
cmake/3rd_party_libs/: fetch.cmake
core/: CMakeLists.txt
core/include/einheit/core/: ec.h
core/src/: ec.c
core/test/: test_ec.c
include/einheit/cli/: adapter.h  adapter_contract.h  aliases.h  audit.h  auth.h  command_tree.h  curve_keys.h  engine.h  error.h  fuzzy.h  globals.h  history.h  learning_daemon.h  line_reader.h  locked_sandbox.h  net_parse.h  no_throw.h  schema.h  session.h  shell.h  shell_escape.h  signals.h  supervisor.h  target_config.h  watch.h  workstation_state.h
include/einheit/cli/confd/: config_backend.h  exerciser.h  memory_backend.h  runtime.h  store.h  zmq_server.h
include/einheit/cli/protocol/: envelope.h  msgpack_codec.h
include/einheit/cli/render/: banner.h  config_tree.h  confirm.h  pager.h  sparkline.h  table.h  terminal_caps.h  theme.h
include/einheit/cli/transport/: inproc.h  oneshot.h  transport.h  zmq_local.h  zmq_remote.h
scripts/: format.sh  lint.sh
src/: adapter_contract.cc  aliases.cc  audit.cc  auth.cc  command_tree.cc  curve_keys.cc  engine.cc  fuzzy.cc  globals.cc  history.cc  learning_daemon.cc  line_reader.cc  locked_sandbox.cc  net_parse.cc  schema.cc  session.cc  shell.cc  shell_escape.cc  signals.cc  supervisor.cc  target_config.cc  watch.cc  workstation_state.cc
src/confd/: exerciser.cc  memory_backend.cc  runtime.cc  store.cc  zmq_server.cc
src/protocol/: msgpack_codec.cc
src/render/: banner.cc  config_tree.cc  confirm.cc  pager.cc  sparkline.cc  table.cc  terminal_caps.cc  theme.cc
src/transport/: inproc.cc  oneshot.cc  zmq_local.cc  zmq_remote.cc
tests/: CMakeLists.txt  fake_curve_daemon.cc  fake_curve_daemon.h  fake_daemon.h  test_adapter_contract.cc  test_codec_resilience.cc  test_command_tree.cc  test_completions.cc  test_confd_confirm.cc  test_confd_persistence.cc  test_confd_runtime.cc  test_confd_transports.cc  test_config_tree.cc  test_curve_keys.cc  test_engine.cc  test_envelope_roundtrip.cc  test_exerciser.cc  test_format_output.cc  test_fuzzy.cc  test_globals.cc  test_hd_relay_adapter.cc  test_help.cc  test_history_aliases.cc  test_input_fuzz.cc  test_learning_daemon.cc  test_lifecycle_fuzz.cc  test_locked_mode.cc  test_net_parse.cc  test_no_throw.cc  test_null_schema.cc  test_oneshot.cc  test_remote_transport.cc  test_schema.cc  test_session_lifecycle.cc  test_shell_escape.cc  test_signals.cc  test_sparkline.cc  test_supervisor.cc  test_table_render.cc  test_takt_adapter.cc  (+7 more)
tests/integ/: CMakeLists.txt  minid.cc  test_end_to_end.cc
